# Luck

./: .gitignore  LICENSE  README.md  cabal.project
coq/: .gitignore  Bang.v  Constraints.v  Make  Makefile  NarrowBase.v  NarrowCompleteness.v  NarrowSoundness.v  Probability.v  README  Types.v  Util.v  Valuation.v
luck/: luck.cabal  stack.yaml
luck/examples/: AC3Test.luck  AC3Test2.luck  BST.luck  BackTrackTest.luck  BinopTest.luck  C.luck  CaseTests.luck  Class.luck  Combination.luck  ConjTest.luck  Fresh.luck  GT.luck  InlineTest.luck  LLNI.luck  ListSet.luck  Map.luck  OrderedPair.luck  Peano.luck  PicoGenExec.luck  PicoGenExecBugArith.luck  RBT.luck  Records.luck  SSNI.luck  STLC.luck  SigTest.luck  Tree.luck  pirapirabug.luck
luck/examples-template/: C-QC.hs  C.hs  ModuleIntro.txt  Stlc-template.hs  Stlc.hs  combination.hs
luck/examples-template/ghc-counters/: 0.hs  out  outOpt
luck/exec/: Main.hs
luck/src/Common/: Conversions.hs  Error.hs  Haskellify.hs  Pretty.hs  SrcLoc.hs  Types.hs  Util.hs
luck/src/Core/: AST.hs  CSet.hs  IntRep.hs  Optimizations.hs  Pretty.hs  Rigidify.hs  Semantics.hs
luck/src/Core/AST/: Pretty.hs
luck/src/Core/Rigidify/: Data.hs  Generator.hs  Pretty.hs
luck/src/Core/Types/: Data.hs  Generator.hs  Pretty.hs
luck/src/Luck/: Main.hs  Prelude.luck  Template.hs
luck/src/Outer/: AST.hs  ClassMono.hs  Expander.hs  Lexer.x  ParseMonad.hs  Parser.hs  Parser.info  Parser.y  Renamer.hs  Types.hs
luck/src/Outer/AST/: Pretty.hs
